fix layout of headshot, making it align with the description horizontally. Added transition to skills section, making each skill transform when hovered over

--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,8 @@ a {
 
 section {
     margin-top: 50px;
-    margin-bottom: 50px;
+    margin-bottom:100px;
+    margin-left:50px;
     padding: 10px;
 }
 
@@ -32,7 +33,7 @@ section {
     background-color: #e31b6d;
     padding: 10px;
     border-radius: 5px;
-
+    font-size: 20px;
 }
 
 .nav-options a:hover {
@@ -54,25 +55,29 @@ section {
 
 
 /* intro section */
-main {
-    margin-left: 50px;
-}
-
-.intro-container {
-    margin-top: 100px;
-    margin-bottom:100px;
-}
 
 .description {
-    margin-right: 50%;
+    margin-right: 10%;
     margin-bottom: 25px;
     font-size: 25px;
     color:white;
-    display: inline;
+    display: flex;
+    flex: 1;
+}
+
+.headshot {
+    border: 3px solid #e31b6d;
+    width: 300px;
+    margin-right: 10%;
+}
+
+.flex-wrapper {
+    display: flex;
+    align-items: center;
+    gap: 20px;
 }
 
 .resumeButton {
-   margin-top:20px;
    display:inline-block;
    transition: all 0.3s ease;
 }
@@ -93,18 +98,24 @@ main {
     color: white;
 }
 
-.headshot {
-    border: 3px solid #e31b6d;
-    width: 200px;
-    margin-top: 10px;
-    display: block;
-}
-
 .headings {
     color:white;
+    text-align: center;
+}
+
+/* About Section */
+.about h2, .about p{
+    color: white;
+}
+
+.about p {
+    font-size: 20px;
 }
 
 /* skills section */
+.skills h2 {
+    color:white;
+}
 
 .skills-container {
     display: flex;
@@ -113,14 +124,27 @@ main {
     flex-wrap: wrap;
 }
 
-.skills {
+.each-skill {
     font-size: 1.5rem;
     color: #e31b6d;
     background-color: #223247;
     padding: 1rem 2.5rem;
     border-radius: .3rem;
+    transition: all 0.3s ease;
 }
 
+.each-skill:hover {
+    transform: scale(1.1);
+}
+
+/* Projects section */
+#projects {
+    color: white;
+}
+
+.each-project {
+    color:white;
+}
 
 /* for the business card */
 
